tests/baselines/reference/objectLitTargetTypeCallSite.errors.txt
tests/cases/compiler/objectLitTargetTypeCallSite.ts(5,9): error TS2345: Argument of type '{ a: boolean; b: string; }' is not assignable to parameter of type '{ a: number; b: string; }'.
  Types of property 'a' are incompatible.
    Type 'boolean' is not assignable to type 'number'.


==== tests/cases/compiler/objectLitTargetTypeCallSite.ts (1 errors) ====
    function process( x: {a:number; b:string;}) {
    	return x.a;
    }
    
    process({a:true,b:"y"});
            ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ a: boolean; b: string; }' is not assignable to parameter of type '{ a: number; b: string; }'.
!!! error TS2345:   Types of property 'a' are incompatible.
!!! error TS2345:     Type 'boolean' is not assignable to type 'number'.